# chezmoi-mousse

./: .codespell-ignore-words  .flake8  .gitignore  .pre-commit-config.yaml  DISABLE_GITHUB_PAGES.md  README.md  THIRD_PARTY_LICENSES.md  dev-requirements.txt  main.py  mkdocs.yml  pyproject.toml  readme.md  requirements.txt  rich_inspect.py
.github/workflows/: linting.yml  pylint.yml
diagrams/: chezmoi-edit.mermaid  chezmoi-update.mermaid  consolidated.puml  daily-commands.mermaid  docs-locations.txt  quickstart-3.mermaid
diagrams/mermaid/: chezmoi-init.mermaid
docs/: mkdocs.yml
mermaid-diagrams/: auto-commit-push.mermaid  chezmoi-init.mermaid  chezmoi-pull-before-update.mermaid  consolidated.mermaid  hosted-repo.mermaid  multiple-machines  notes.txt  quickstart-1.mermaid  quickstart-2.mermaid
notes/: button-text.txt  current_bins_in_env.txt  dev-venv-requirements.txt  example_headers.txt  gadient_hex_rgb.py  greeter-test.py  main-sections.md  notes.txt  pre_init_cmd_outputs.md  run.sh  sliders.py  thoughts.md  with-console.json
screenshots/: take.py
scripts/: parse_chezmoi_install_doc.py
site/: 404.html
site/css/: brands.min.css
site/js/: bootstrap.bundle.min.js  bootstrap.bundle.min.js.map
site/search/: lunr.js
src/: chezmoi-config.json  vasy.py
src/chezmoi-mousse/: application.py
src/chezmoi_mousse/: 2025_fireworks.py  __init__.py  __main__.py  _app_ids.py  _app_state.py  _button_data.py  _button_labels.py  _canvas_data.py  _canvas_ids.py  _chars.py  _chezmoi.py  _chezmoi_cmd.py  _chezmoi_command.py  _chezmoi_paths.py  _cmd_results.py  _constants.py  _content_switchers.py  _debug.py  _enum_data.py  _gui.tcss  _id_classes.py  _labels.py  _names.py  _operate_button_data.py  _operate_buttons.py  _operate_help.py  _path_widgets.py  _pilot_mode.py  _pilot_test.py  _pre_run_logic.py  _run_cmd.py  _singletons.py  _str_enum_bindings.py  _str_enum_names.py  _str_enum_tcss.py  _str_enums.py  _subtitles.py  _switch_data.py  _switches.py  _tcss_classes.py  (+75 more)
src/chezmoi_mousse/base/: switch_slider.py
src/chezmoi_mousse/data/: chezmoi_install_commands.json  gui.tcss
src/chezmoi_mousse/gui/: __init__.py  _chezmoi.py  _chezmoi_gui.py  _gui.tcss  _id_classes.py  add_tab.py  app.py  apply_tab.py  button_groups.py  chezmoi.py  chezmoi_gui.py  chezmoi_install_commands.json  config_tab.py  containers.py  content_switchers.py  custom_theme.py  debug_tab.py  destroy_tab.py  directory_tree.py  forget_tab.py  gui.tcss  help_tab.py  init_chezmoi.py  init_screen.py  init_tab.py  install_help.py  install_help_screen.py  logs_tab.py  main_screen.py  main_tabs.py  managed_paths.py  messages.py  operate.py  operate_chezmoi.py  operate_init.py  operate_mode.py  operate_tabs.py  overrides.py  pre_run_screens.py  re_add_tab.py  (+14 more)
src/chezmoi_mousse/gui/common/: actionables.py  contents.py  diffs.py  doctor_data.py  doctor_table.py  filtered_dir_tree.py  git_log.py  git_log_view.py  loading_modal.py  loggers.py  managed_tree.py  messages.py  (+11 more)
src/chezmoi_mousse/id_typing/: __init__.py  _chezmoi_cmd.py  _enums.py  _id_classes.py  _str_enums.py  _types.py  enums.py
src/chezmoi_mousse/screens/: chezmoi_install_commands.json
src/chezmoi_mousse/shared/: __init__.py  _actionables.py  _buttons.py  _cat_config.py  _config_views.py  _contents_view.py  _custom_collapsible.py  _dest_dir_info.py  _diff_view.py  _doctor_table.py  _generated_collapsible.py  _git_log_view.py  _git_log_views.py  _loggers.py  _messages.py  _operate_info.py  _operate_mode.py  _operate_msg.py  _operations_base.py  _pw_mgr_info.py  _reactive_header.py  _screen_header.py  _section_headers.py  _ssh_scp_validator.py  _template_data.py  git_log_view.py  operate_msg.py  section_headers.py
src/config/: mousse-app.toml
src/tuiapp/: mousse.py  textual.tcss
static_tests/: README.md  _test_utils.py  test_app_ids.py  test_canvas_ids.py  test_dataclasses.py  test_debug_leftovers.py  test_duplicate_assignments.py  test_enums.py  test_exported_vars.py  test_flake8.py  test_id_classes.py  test_import_export.py  test_indirect_imports.py  test_methods.py  test_properties.py  test_query_args.py  test_runtime_smoke.py  test_runtime_snapshot.py  test_tcss.py
tests/: README.md  _test_utils.py  id_args.py  id_typing.py  str_enums.py  tcss.py  test.txt  test_all_buttons.py  test_app.py  test_app_and_textual_version.py  test_chezmoi.py  test_class_members.py  test_components.py  test_constants.py  test_debug_leftovers.py  test_doctor.py  test_enums.py  test_exported_vars.py  test_gui.py  test_hardcoded_ids.py  test_id_args.py  test_id_classes.py  test_id_typing.py  test_id_typing_checkup.py  test_imports.py  test_init_method_vars.py  test_main.py  test_main_screen.py  test_mousse.py  test_simple.py  test_splash_screen.py  test_stc_enums.py  test_str_enums.py  test_tcss.py  test_tcss_checkup.py  test_tcss_classes.py  test_textual_aspects.py  test_textual_id_args.py  test_utils.py  text_file.txt
tests/smoke_tests/: test_runtime_smoke.py
tests/static_tests/: test_debug_leftovers.py  test_methods.py  test_query_args.py
(+82 files in other folders)
