[project]
name = "chezmoi-mousse"
version = "0.1.0"
description = "Visual interface in the terminal for the chezmoi dotfile managar, with a wink to the mouse."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual[syntax]>=7.0.1",
]

[project.urls]
Repository = "https://github.com/matmaer/chezmoi-mousse"

[dependency-groups]
dev = [
    "black",
    "docformatter",
    "faker",
    "flake8",
    "graphviz",
    "ipython",
    "isort",
    "memray",
    "mypy",
    "pre-commit",
    "profiler",
    "pydeps",
    "pylint",
    "pytest",
    "pytest-asyncio",
    "pytest-env",
    "pytest-memray",
    "pytest-textual-snapshot",
    "ruff",
    "snakeviz",
    "textual",
    "textual-dev",
    "twine",
]

[tool.pre-commit]
config = ".pre-commit-config.yaml"

[tool.pytest.ini_options]
addopts = "--color=auto --tb=no -s --no-header -v -p no:cacheprovider"
testpaths = ["static_tests"]
pythonpath = ["src"]
python_files = ["[!_]*.py"]
asyncio_mode = "auto"
truncation_limit_chars = 0
truncation_limit_lines = 0
env = ["CI=1"]

[tool.black]
skip-magic-trailing-comma = true
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes (includes F401 unused imports)
    "W",    # pycodestyle warnings
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
]
ignore = [
    "E203", # whitespace before ':' (not PEP8 compliant, handled by black)
]

[tool.ruff.lint.per-file-ignores]
"src/chezmoi_mousse/__init__.py" = ["F401"]
