[project]
name = "chezmoi-mousse"
version = "0.1.0"
description = "Visual interface in the terminal for the chezmoi dotfile manager, with a wink to the mouse."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "textual[syntax]>=8.0.1",
]

[project.urls]
Repository = "https://github.com/matmaer/chezmoi-mousse"

[dependency-groups]
dev = [
    "black",
    "docformatter",
    "faker",
    "graphviz",
    "ipython",
    "memray",
    "mypy",
    "pre-commit",
    "profiler",
    "psutil",
    "pydeps",
    "pytest",
    "pytest-asyncio",
    "pytest-env",
    "pytest-memray",
    "pytest-textual-snapshot",
    "ruff",
    "snakeviz",
    "textual",
    "textual-dev",
    "tomlkit",
    "twine",
]

[tool.pre-commit]
config = ".pre-commit-config.yaml"

[tool.pytest.ini_options]
addopts = "--color=auto --tb=no -s --no-header -v -p no:cacheprovider"
testpaths = ["static_tests"]
pythonpath = ["src"]
python_files = ["[!_]*.py"]
asyncio_mode = "auto"
truncation_limit_chars = 0
truncation_limit_lines = 0
env = ["CI=1"]

[tool.black]
skip-magic-trailing-comma = true
target-version = ["py313"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "ARG",     # Unused arguments
    "B",       # flake8-bugbear
    "C4",      # flake8-comprehensions
    "E",       # pycodestyle errors
    "ERA001",  # eradicate (commented-out code)
    "F",       # Pyflakes
    "I",       # isort
    "N",       # Naming
    "PLE",     # pylint errors
    "PT",      # Pytest style
    "PTH",     # Use pathlib
    "RUF012",  # flake8-class-attributes
    "SIM",     # Simplify
    "UP",      # pyupgrade
    "W",       # pycodestyle
]

[tool.codespell]
check-filenames = true
ignore-words-list = "ReAdd,re-add"
